# deadline-cloud-for-cinema-4d

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  depsBundle.py  depsBundle.sh  hatch.toml  pyproject.toml  requirements-testing.txt
.github/workflows/: release_publish.yml  reuse_python_build.yml
deadline_cloud_extension/: DeadlineCloud.pyp
scripts/: build_wheels.sh  create_adaptor_packaging_artifact.sh
src/deadline/cinema4d_adaptor/Cinema4DAdaptor/: Cinema4DAdaptor.json  __init__.py  __main__.py  adaptor.py  adaptor.sh
src/deadline/cinema4d_adaptor/Cinema4DAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/cinema4d_adaptor/Cinema4DClient/: __init__.py  cinema4d_client.py  cinema4d_handler.py
src/deadline/cinema4d_adaptor/Cinema4DClient/plugin/: DeadlineCloudClient.pyp
src/deadline/cinema4d_submitter/: __init__.py  adaptor_cinema4d_job_template.yaml  adaptor_override_environment.yaml  assets.py  cinema4d_render_submitter.py  data_classes.py  default_cinema4d_job_template.yaml  scene.py  style.py  takes.py
src/deadline/cinema4d_submitter/ui/components/: scene_settings_tab.py
test/deadline_adaptor_for_cinema4d/: __init__.py
test/deadline_adaptor_for_cinema4d/unit/Cinema4DAdaptor/: test_adaptor.py
test/deadline_submitter_for_cinema4d/: __init__.py
test/deadline_submitter_for_cinema4d/unit/: __init__.py  test_assets.py  test_scene.py  test_submitter.py
